[gd_scene load_steps=5 format=3 uid="uid://dnl3yy0n6ugpv"]

[ext_resource type="Script" path="res://Enemies/Basic_Enemy_Movement.gd" id="1_yc8a6"]
[ext_resource type="Script" path="res://Enemies/Basic_Enemy.gd" id="2_p67sl"]
[ext_resource type="Texture2D" uid="uid://cdh804vgjp2jd" path="res://icon.svg" id="3_wwqvk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nve4r"]
size = Vector2(98, 94)

[node name="Basic_enemy_path" type="PathFollow2D"]
script = ExtResource("1_yc8a6")

[node name="Basic_enemy" type="Area2D" parent="."]
script = ExtResource("2_p67sl")

[node name="Attack_timer" type="Timer" parent="Basic_enemy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Basic_enemy"]
shape = SubResource("RectangleShape2D_nve4r")

[node name="Sprite2D" type="Sprite2D" parent="Basic_enemy"]
scale = Vector2(0.78125, 0.726563)
texture = ExtResource("3_wwqvk")

[connection signal="area_entered" from="Basic_enemy" to="Basic_enemy" method="_on_area_entered"]
[connection signal="area_exited" from="Basic_enemy" to="Basic_enemy" method="_on_area_exited"]
[connection signal="attack" from="Basic_enemy" to="." method="_on_test_enemy_attack"]
